# usol-sign-reader

./: README.md  setup.py
docs/: README.md
examples/: run_image_reader.py  run_sign_detector.py  run_symbol_detector.py  run_text_reader.py
notebooks/: prototype_model_load.ipynb  prototype_save_result_as_csv.ipynb  prototyping_are_elements_on_same_line.ipynb  prototyping_detector_better_symbdetect_call.ipynb  prototyping_duration_string_to_int_minutes.ipynb  prototyping_get_scontent_without_none_coordinates.ipynb  prototyping_image_reader.ipynb  prototyping_json_export.ipynb  prototyping_ligne_detector.ipynb  prototyping_md_answer_formatting.ipynb  prototyping_text_detection.ipynb  test_detector.ipynb  train_Cellpose-SAM.ipynb  train_yolo_ultralytics.ipynb
scripts/ireader/: run_image_reader.py
scripts/segmentation/: get_dsets_for_cellpose.py  get_image_sizes.py  get_nb_of_annotated_signs.py  get_segmap_from_napari_polygons.py  get_train_and_test_loss_curves.py  run_sign_detector.py  test_sign_detector.py  train_cellpose.py
scripts/symbols/: cross_ref_class_folders_and_lstudio_json.py  get_annotation_stats.py  get_class_instances_per_image.py  get_dset_for_yolo_ultralytics.py  get_fname_selection_for_bbox_annotation.py  get_train_fname_list.py  (+4 more)
signreader/: README.md  __main__.py  detector.py  setup.cfg
signreader/engine/: __init__.py  sign.py  sign_detector.py  symbol.py  text.py
signreader/utils/: analysis.py  io.py  jsonusol.py  plot.py  transform.py
tests/: test_sign_detector.py  test_symbol_detector.py  test_text_reader.py
utils/: io.py  transform.py
(+3 files in other folders)
