[metadata]
name = signreader
version = 0.0.0
author = E. Moebel
author_email = emmanuel.moebel@gmail.com

license = Apache-2.0 license
description = AI-based tool for extracting information from photos of hiking signs.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    cellpose==4.0.4
    ultralytics==8.3.156
    moondream==0.1.0

[options.entry_points]
console_scripts =
    signreader = signreader.__main__:main